last projects correção

--- a/index.html
+++ b/index.html
@@ -83,6 +83,20 @@
                     </div>
 
                 </div>
+                <div class="squares">
+                    <div class="r-more">
+                        <img src="/assets/images/gallery/7zipthumb.png" alt="" srcset="">
+                        <div class="line"></div>
+                        <p href="#">see more</p>
+                    </div>    
+                        
+                    <div class="r-more">
+                        <img class='left' src="/assets/images/gallery/erinthumb.png" alt="" srcset="">
+                        <div class="line"></div>
+                        <p href="#">see more</p>
+                    </div>
+
+                </div>
         </section>
 
 
