--- a/index.html
+++ b/index.html
@@ -135,6 +135,11 @@
                         <button type="button">SUBMIT</button>
                       </form>
                     </div>
+                   <div class="drop"> <h1>Drop me <br>a line.</h1>
+                    <svg width="102" height="1" viewBox="0 0 102 1" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <line x1="102" y1="0.5" y2="0.5" stroke="black"/>
+                        </svg>
+                        </div>
             </div>
         
         </section>
