--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                         <label for="project-idea">How can we work together?</label>
                         <textarea id="project-idea" rows="4">
                   </textarea>
-                        <button type="button">SUBMIT</button>
+                        <button type="button">Submit</button>
                       </form>
                     </div>
                    <div class="drop"> <h1>Drop me <br>a line.</h1>
@@ -155,5 +155,13 @@
 
 
 </body>
+<footer>
+    <div class="div">a</div>
+    <div class="div">a</div>
+    <div class="div">a</div>
+    <div class="div">a</div>
+    <div class="div">a</div>
+    <div class="div">a</div>
+</footer>
 
 </html>
