--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800&display=swap"
         rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/circular-revealer@0.0.8/dist/index.iife.js"></script>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
     <link rel="stylesheet" href="/css/main.css">
 </head>
 
@@ -145,6 +146,23 @@
         </section>
 
 
+<footer>
+  
+
+    <div class="footer-container">
+        <div class="icons">
+            <i class="fab fa-behance"></i>
+            <i class="fab fa-github"></i>
+            <i class="fab fa-linkedin-in"></i>
+        </div>
+        <div class="links">
+            
+        </div>
+    </div>
+</footer>
+
+
+
     </main>
 
 
@@ -155,13 +173,6 @@
 
 
 </body>
-<footer>
-    <div class="div">a</div>
-    <div class="div">a</div>
-    <div class="div">a</div>
-    <div class="div">a</div>
-    <div class="div">a</div>
-    <div class="div">a</div>
-</footer>
+
 
 </html>
