--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-
+    
     <div>
 
         <img src="/assets/images/Me logo.png" alt="" srcset="">
@@ -41,9 +41,8 @@
     </header>
 
     <main>
-        <div class="inner-cursor"></div>
-        <div class="outer-cursor"></div>
         
+
         <section>
 
 
@@ -56,7 +55,10 @@
 
             </div>
             <div class="presentation">
-
+<div class="cursor">
+<div class="inner-cursor"></div>
+<div class="outer-cursor"></div>
+</div>
                 <img data-aos="fade-up" data-aos-duration="500" src="/assets/images/gallery/illustration1.png"
                     alt="men doing multiple things" srcset="">
                 <div class="text-apres">
