--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
 
     </header>
-
+    <!-- <div id="bm"> </div> -->
     <main>
 
 
@@ -72,7 +72,7 @@
                     </svg>
                     <h2 data-aos="fade-up" data-aos-duration="1500">I'm freelance website designer and developer based
                         in Bahia, Brazil.
-                        <br>I love the creative process and am very interested <br>in bringing unique results to my
+                        <br>I love the creative process and i am very interested <br>in bringing unique results to my
                         clients.
                     </h2>
 
@@ -155,7 +155,11 @@
                 
             <div id="contact" class="dropme"></div>
             <div class="contact-container">
+                <div class="mobile-dropt">
+                        <h1>Drop me a line.</h1>
+                    </div>
                 <div class="work-with-us">
+                    
                     <div class="form">
                         <form>
                             <label for="name">Your name</label>
@@ -210,7 +214,7 @@
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.js"
         integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
-
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/bodymovin/5.8.1/lottie.min.js"></script>
     <script src="/js/main.js"></script>
     <!-- <script src="/js/smoothscroll.js"></script> -->
 
