--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <li data-scroll class="header__menu-item"><a href="#about">about</a></li>
             <li class="header__menu-item"><a href="#projects">projects</a></li>
             <li class="header__menu-item"><a href="#contact">contact</a></li>
-            <li class="header__menu-item"><a href="/index copy.html">blog</a></li>
+            <li class="header__menu-item"><a href="/blog.html">blog</a></li>
         </ul>
     </nav>
 
