--- a/index.html
+++ b/index.html
@@ -113,6 +113,26 @@
                 <div data-aos="fade-up" data-aos-duration="1000" class="squares">
 
                     <div class="r-more">
+                        <a href="https://www.behance.net/gallery/126290023/7-Zip-UI-Redesign-Concept">
+                            <img src="/assets/images/gallery/7zipthumb.png" alt="" srcset="">
+                            <div class="line"></div>
+                            <p>see more</p>
+                        </a>
+                    </div>
+
+                    <div class="r-more">
+                        <a href="https://www.erinartist.com/">
+                            <img class='left' src="/assets/images/gallery/erinthumb.png" alt="" srcset="">
+                            <div class="line"></div>
+                            <p>see more</p>
+                        </a>
+                    </div>
+
+
+                </div>
+
+                <!-- <div data-aos="fade-up" data-aos-duration="1500" class="squares">
+                    <div class="r-more">
                         <a href="#">
                             <img src="/assets/images/gallery/7zipthumb.png" alt="" srcset="">
                             <div class="line"></div>
@@ -128,27 +148,7 @@
                         </a>
                     </div>
 
-
-                </div>
-
-                <div data-aos="fade-up" data-aos-duration="1500" class="squares">
-                    <div class="r-more">
-                        <a href="#">
-                            <img src="/assets/images/gallery/7zipthumb.png" alt="" srcset="">
-                            <div class="line"></div>
-                            <p>see more</p>
-                        </a>
-                    </div>
-
-                    <div class="r-more">
-                        <a href="#">
-                            <img class='left' src="/assets/images/gallery/erinthumb.png" alt="" srcset="">
-                            <div class="line"></div>
-                            <p>see more</p>
-                        </a>
-                    </div>
-
-                </div>
+                </div> -->
         </section>
         <section>
             <svg width="286" height="18" viewBox="0 0 286 18" fill="none" xmlns="http://www.w3.org/2000/svg">
